--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -29,6 +29,7 @@
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoricDataVisualisation.html">Analysis: Historic Data Visualisation</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/CommunicatingData.html">Reflection: Chapter 9(Communicating Data To An Audience)</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/InformationIsBeautiful.html"> Bonus Analysis: Information Is Beautiful</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/StyleGuide.html"> Website Style Guide</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
       </article>  
@@ -53,19 +54,22 @@
    <section style="text-align: center;">
     <svg> 
      <rect x="50" y="50" width="10" height="10" fill="#310B12"/>
-     <text x="70" y="60" font-size="" fill="Black"> Total Confirmed </text>
+     <text x="70" y="60" font-size="" fill="Black"> Total Confirmed: 30 401 165 </text>
     </svg>
     <svg> 
      <rect x="50" y="50" width="10" height="10" fill="#AEF359"/>
-     <text x="70" y="60" font-size="" fill="Black"> Total Cases Recovered </text>
+     <text x="70" y="60" font-size="" fill="Black"> Total Recovered: 20 679 743 </text>
     </svg>
     <svg> 
      <rect x="50" y="50" width="10" height="10" fill="#943a49"/>
-     <text x="70" y="60" font-size="" fill="Black"> Total Deaths </text>
+     <text x="70" y="60" font-size="" fill="Black"> Total Deaths: 950 459 </text>
     </svg>
     <svg> 
      <rect x="50" y="50" width="10" height="10" fill="#0492C2"/>
-     <text x="70" y="60" font-size="" fill="Black"> New Reportings In Categories </text>
+     <text x="70" y="60" font-size="" fill="Black"> New Reportings In Categories:</text>
+     <text x="80" y="75" font-size="" fill="Black"> Confirmed: 230 775</text>
+     <text x="80" y="90" font-size="" fill="Black"> Deaths: 4 458</text>
+     <text x="80" y="105" font-size="" fill="Black"> Recovered: 155 519</text>
     </svg>
     </section>
 
