--- a/Blogs/InformationIsBeautiful.html
+++ b/Blogs/InformationIsBeautiful.html
@@ -47,6 +47,9 @@
   scatter plot, that allows you to view the age or average age of various categories. Once you enter the website, you are asked to fill in 
   your age and they then plot your age on the diagram whereby you can compare to other age categories where you fall in or align. </p>
 
+  <img src="../Images/Information is Beautiful1.png" alt="Screenshot of the Who old are you question page" width="600px" height="350" style="padding-top: 5%; padding-bottom: 5%;">
+
+
 <p>Upon first encountering the chart I didn’t know what to suspect, especially from the word choice within the name. Once I was requested to 
   insert my age, it was then that I developed expectations of what was to come. Initially to understand what I was being shown was difficult 
   and slightly overwhelming as it was the first time that I was exposed to such a scatter plot. However, once I deactivated the diagram being 
@@ -54,6 +57,9 @@
   realized that the graph turned out exactly as I had expected. Based on my age, the graph demonstrates the average age of a particular profession. 
   The added feature, however, is you can select categories that give you detailed specifics based on what you chose. For example, you can choose 
   to see the average age when various professions reach a career-high or creative zenith. </p>
+
+  <img src="../Images/Information is Beautiful2.png" alt="Screenshot of the Who old are you scatter plot" width="600px" height="350" style="padding-top: 5%; padding-bottom: 5%;">
+
 
 <p>The graph in many ways reflects factors that Nathalie Riche demonstrates in chapter 9 of her book, ‘Data-driven storytelling’, whereby she 
   addresses communicating data to an audience. Riche highlighted the importance of data visualisations having annotations, as 
@@ -77,6 +83,8 @@
   by providing an opportunity for self-identification. Besides encouraging engagement and self-identification, Riche et al establish that asking 
   the audience a question allows the audience to better remember what they have seen. For instance, I am now able to remember what average age 
   directors and writers experience a career peak and creative zenith. </p>
+
+  <img src="../Images/Information is Beautiful3.png" alt="Screenshot of the Who old are you scatter plot" width="600px" height="350" style="padding-top: 5%; padding-bottom: 5%;">  
 
 <p>Overall, I advance that the ‘Who old are you’ scatter plot is a great example of a well-designed data visualisation that can grab attention 
   for its audience as well offer an opportunity for self-identification. The information the communicate is relevant to all people, and speaks 
