--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -55,6 +55,11 @@
       <img src="../Images/Blog Posts Wireframe.png" alt="Wireframe reflecting blog post page layout and commentary" width="700" height="100%">
     </section>
 
+    <h2>Creative Work Page Wireframe</h2>
+    <section class="wireframes">
+      <img src="../Images/Creative Work Wireframe.png" alt="Wireframe reflecting blog post page layout and commentary" width="700" height="100%">
+    </section>
+
     <h2>Reference Page Wireframe</h2>
     <section class="wireframes">
       <img src="../Images/References Wireframe.png" alt="Wireframe reflecting reference page layout and commentary" width="700" height="100%">
