--- a/About/index.html
+++ b/About/index.html
@@ -28,17 +28,20 @@
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoricDataVisualisation.html">Analysis: Historic Data Visualisation</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/CommunicatingData.html">Reflection: Chapter 9(Communicating Data To An Audience)</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/InformationIsBeautiful.html"> Bonus Analysis: Information Is Beautiful</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/StyleGuide.html"> Website Style Guide</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
-      </article>  
+      </article>   
       <a href="../index.html">Home</a>
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
   </header>
 
   <main>
+    <!-- About Page Introductory Image -->
     <img src="../Images/Aboutmain.png" alt="example of data visualisation" width="100%" height="350">
 
+    <!-- About Information Section -->
     <article style="margin-left: 7%; margin-right: 7%;">
      <h2>About The Website</h2>
      <h3>Exploring Data Visualisation</h3>
@@ -67,10 +70,11 @@
      </section>
      </article>
     
+     <!-- Website Data Cards -->
      <section class="row">
       <article class="column">
         <section class="card">
-          <h3>4+</h3>
+          <h3>6+</h3>
           <p>Blogs</p>
         </section>
       </article>
