--- a/Blogs/InformationIsBeautiful.html
+++ b/Blogs/InformationIsBeautiful.html
@@ -94,7 +94,7 @@
   <cite>“A single-story cannot possibly address all possible different audiences and their needs. And any well-designed story will be tailored 
     not just to its data and the intended message, but to its audience.” </cite>  (Riche et al., 2018:212)</p>
 
-<p><strong>808 words</strong></p>
+<p><strong>(808 words)</strong></p>
     </section>
 
     <!-- References -->
