--- a/Blogs/StyleGuide.html
+++ b/Blogs/StyleGuide.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="../JavaScript/navbar.js"></script>
     <link rel="stylesheet" type="text/css" href="../CSS/navbar.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/wireframes.css">
 </head>
 
 <body>
@@ -37,13 +38,16 @@
   </header>
 
   <main> 
-    <h2>Website Style Guide</h2>
-    <section class="wireframes">
+    <h1>Website Style Guide</h1>
+
+    <!-- Style Guide Image -->
+    <section class="styleguide">
       <img src="../Images/Style Guide.png" alt="Image reflecting website style guide content, including; colour palette, fonts and mood board" width="700" height="100%">
     </section> 
 
+    <!-- Style Guide Reflection Section -->
     <section style="max-width:700px; margin:auto;">
-      <h1>Website Style Guide Reflection</h1>
+      <h2>Website Style Guide Reflection</h2>
       <p>My goal for the website design is to achieve simplistic sophistication. To not overwhelm users, whilst attaining their attention and 
         curiosity. I hoped to ensure that navigation is also kept simple and minimal. Currently, the most exciting and eye catching part of 
         the website is the homepage and the graphs. Most of the creative and technical exploration will be demonstrated in the formation of 
