--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -38,6 +38,9 @@
   </header>
 
   <main>
+
+    <!-- Wireframes Images -->
+    <article>
     <h1>Website Wireframes</h1>
 
     <h2>Home Page Wireframe</h2>
@@ -72,10 +75,11 @@
       the website is the homepage and the graphs. Most of the creative and technical exploration will be demonstrated in the formation of 
       the data visualization.</p>
     </section>
+    </article>
 
     <!-- Pagination -->
     <section class="pagination">
-      <a href="InformationIsBeautiful.html">&laquo;</a>
+      <a href="StyleGuide.html">&laquo;</a>
       <a href="TheoriesOfRepresentation.html">1</a>
       <a href="HistoricDataVisualisation.html">2</a>
       <a href="CommunicatingData.html">3</a>
