--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </nav>
   </header>
 
+  <!-- Landing Page Showcase Section -->
   <article class="bg"> 
       <h1 class="glow"> WELCOME TO ViCoDa</h1>
       <h3 class="glow"> A website dedicated to exploring data visualisation</h3>
