--- a/Blogs/StyleGuide.html
+++ b/Blogs/StyleGuide.html
@@ -48,10 +48,38 @@
     <!-- Style Guide Reflection Section -->
     <section style="max-width:700px; margin:auto;">
       <h2>Website Style Guide Reflection</h2>
-      <p>My goal for the website design is to achieve simplistic sophistication. To not overwhelm users, whilst attaining their attention and 
-        curiosity. I hoped to ensure that navigation is also kept simple and minimal. Currently, the most exciting and eye catching part of 
-        the website is the homepage and the graphs. Most of the creative and technical exploration will be demonstrated in the formation of 
-        the data visualization.</p>
+      <p>According to Launch Marketing, a website style guide is <cite>"a document that provides guidelines for the way your brand should be 
+        presented from both a graphic and language perspective."</cite> (Launch Marketing 2018). From my understanding, a style guide gives 
+        users and targeted audiences an illustration of how to identify your brand, moreover, how to interpret it. </p>
+
+      <p>My website style guide is divided into 3 main categories that make up my website. The first category is the colour palette. 
+        In my colour palette, I have demonstrated all the colours I have used throughout my website including in the circular packing diagram. 
+        The colours are used in groups for consistency, the navigation bar makes use of the darker colours on the right, the diagrams and data 
+        visualisations make use of the bright and lively colours on the left, and the remaining colours are used throughout the website.</p>
+
+      <p>The next category reflected in my website style guide is font usage. I have a total of 5 fonts throughout the website. 
+        Cody star is the chosen font for the landing page. I chose this font for the landing page as it provides a techy feel to the data 
+        visualisation illustration that is on the landing page. Khand is the next font that I have used throughout the website as a default font, 
+        it is used on the about page, blog posts, and the reference page. I chose this font as it provides a sophisticated feel to the layout of 
+        the website.</p>
+
+      <p>Kalam is a font that I have used only for the data visualisation to provide users with the cue of them accessing a different 
+        atmosphere of the website, being the creative section. Arial is the font that I used to communicate the diagram keys. 
+        This is to ensure it can be easily read by all individuals to avoid misinterpretation as a result of not being able to read the information. 
+        The fifth font has not been used as yet, this is the Srisakdi font, which is very playfully, I aim to incorporate this font into future 
+        data visualisation.</p>
+
+      <p>The final section of my website style guide provides a visual demonstration to the mood and atmosphere I hope to achieve, the mood board. 
+        The mood board is meant to reflect the type of visual presentation that is to be used. My mood board reflects purples and lights, 
+        for brightness, which is how I aim to present my graphs.</p>
+
+      <section>
+        <h2><strong>References</strong></h2>
+
+        <p>Launch Marketing (2018) <cite>What Is a Style Guide and Why Is It Important to My Brand Identity?</cite> 
+          [Online] Available at: <a href="https://www.launch-marketing.com/style-guide-important-brand-identity/">
+            https://www.launch-marketing.com/style-guide-important-brand-identity/ </a>(Accessed 23 August 2020)</p>
+      </section>
       </section>
     
     <!-- Pagination -->
