--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -115,11 +115,24 @@
     <section style="max-width:900px; margin:auto; padding-bottom: 3%;">
         <h2>Reflection On Graph</h2>
 
-        <p>My goal for the website design is to achieve simplistic sophistication. To not overwhelm users, whilst attaining their attention and 
-          curiosity. I hoped to ensure that navigation is also kept simple and minimal. Currently, the most exciting and eye catching part of 
-          the website is the homepage and the graphs. Most of the creative and technical exploration will be demonstrated in the formation of 
-          the data visualization.</p>
+        <p>My chosen graph is the circulate packing graph. According to the website 'from Data to Viz', the circular packing diagram 
+          demonstrates the visualisation of a hierarchic organisation. In my diagram, I aimed to demonstrate the hierarchy of coronavirus 
+          cases confirmed, and the subcategories of those confirmed how many recovered and how many resulted in deaths. 
+          I utilized the area of the circle to represent the number and portion of categories. The subcategories were calculated in 
+          proportion to the total confirmed cases.</p>
 
+        <p>my data visualisation I aimed to elicit hope in my audience. I found that there is so much circulation of bad news and issues, 
+          that have caused anxiety. I do not wish to overlook the lives of those we have lost, but aim to encourage people to recognize 
+          that being infected by the virus is not an immediate death sentence and that there is hope in all the bad, there is an opportunity 
+          for survival.</p>
+
+        <p>The disadvantage of the circular packing diagram is that it is difficult for the human eye to translate area size into exact 
+          numbers accurately. As a result, I have included keys that reflect the exact numbers. The keys are meant to represent a form of 
+          Annotation, so as to assist the audience in better interpreting the graph.</p>
+
+        <p>I hoped to increase interactivity in the diagram, however, was limited because of the time frame and my level of technical 
+          competency, at the time of submission. In the future, I aim to create a more intricate diagram, that better reflects data and 
+          communicates the information adequately to the user.</p>
         </section>
 
   </main>
