--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -38,7 +38,7 @@
   </header>
 
   <main>
-    <h1 class="glow">CORONA VIRUS API DATA VISUALISATION</h1>
+    <h1 class="glow">CORONAVIRUS API DATA VISUALISATION</h1>
         
     <!-- Creative Work Introduction Section -->
     <section style="max-width:700px; margin:auto;">
@@ -48,7 +48,7 @@
     </section>
 
     <!-- Graph Heading And Extra Detail -->
-   <h2>Global Coronavirus Progress Portions Graph</h2>
+   <h2>Global Coronavirus Confimred Cases Data Hierarchy </h2>
    <h3>Reflecting Data From Saturday 19th September 2020</h3>
 
    <!-- Graph Keys -->
