--- a/Blogs/StyleGuide.html
+++ b/Blogs/StyleGuide.html
@@ -72,16 +72,18 @@
       <p>The final section of my website style guide provides a visual demonstration to the mood and atmosphere I hope to achieve, the mood board. 
         The mood board is meant to reflect the type of visual presentation that is to be used. My mood board reflects purples and lights, 
         for brightness, which is how I aim to present my graphs.</p>
+      <p><strong>(404 Words)</strong></p>  
+      </section>
 
-      <section>
+   <!-- References -->
+    <section>
         <h2><strong>References</strong></h2>
 
         <p>Launch Marketing (2018) <cite>What Is a Style Guide and Why Is It Important to My Brand Identity?</cite> 
           [Online] Available at: <a href="https://www.launch-marketing.com/style-guide-important-brand-identity/">
             https://www.launch-marketing.com/style-guide-important-brand-identity/ </a>(Accessed 23 August 2020)</p>
       </section>
-      </section>
-    
+
     <!-- Pagination -->
     <section class="pagination">
       <a href="InformationIsBeautiful.html">&laquo;</a>
