--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -67,25 +67,27 @@
     <section class="wireframes">
       <img src="../Images/References Wireframe.png" alt="Wireframe reflecting reference page layout and commentary" width="700" height="100%">
     </section>
+    
+    </article>
 
     <!-- Wireframe Reflection Section -->
     <section style="max-width:700px; margin:auto;">
     <h1>Website Wireframes Reflection And Proposed UI</h1>
     <p> According to Margaret Rouse, user interface can be defined as <cite>"the point of human-computer interaction and communication in a device. 
-      This can include display screens, keyboards, a mouse, and the appearance of a desktop. It is also the way through which a user interacts 
-      with an application or a website."</cite> (Rouse 2019). With that said, I have identified my proposed user interface points as mainly the 
+      This can include display screens, keyboards, a mouse, and the appearance of a desktop. It is also the way through which a user interacts with an application or a website."</cite> (Rouse 2019). With that said, I have identified my proposed user interface points as mainly the 
       mouse for clicking and scrolling and the website itself. On the website, the user can click on blog post options and browse through various 
       content throughout the website. I aim to add interactive graphs and diagrams as part of the creative work sections to increase user 
       interaction and engagement.</p>
 
     <p>To further demonstrate the proposed user interface I have added below a user journey map. In this user journey map, 
       I reflect on how users are likely to navigate through the website.</p>
+
+    <!-- Add User Journey Map -->
     </section>
-    </article>
 
     <!-- Refernces -->
     <section style="max-width: 600px; margin: auto;">
-      <h2><strong>References<strong></h2>
+      <h2><strong>References</strong></h2>
 
       <p>Rouse, M. (2019) <cite>User Interface (UI).</cite> [Online] Available at: 
         <a href= "https://www.google.co.za/amp/s/searchapparchitecture.techtarget.com/definition/user-interface-UI%3famp=1"> 
