--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -115,13 +115,13 @@
     <section style="max-width:900px; margin:auto; padding-bottom: 3%;">
         <h2>Reflection On Graph</h2>
 
-        <p>My chosen graph is the circulate packing graph. According to the website 'from Data to Viz', the circular packing diagram 
+        <p>My chosen graph is the circular packing graph. The circular packing diagram 
           demonstrates the visualisation of a hierarchic organisation. In my diagram, I aimed to demonstrate the hierarchy of coronavirus 
           cases confirmed, and the subcategories of those confirmed how many recovered and how many resulted in deaths. 
           I utilized the area of the circle to represent the number and portion of categories. The subcategories were calculated in 
           proportion to the total confirmed cases.</p>
 
-        <p>my data visualisation I aimed to elicit hope in my audience. I found that there is so much circulation of bad news and issues, 
+        <p>My data visualisation I aimed to elicit hope in my audience. I found that there is so much circulation of bad news and issues, 
           that have caused anxiety. I do not wish to overlook the lives of those we have lost, but aim to encourage people to recognize 
           that being infected by the virus is not an immediate death sentence and that there is hope in all the bad, there is an opportunity 
           for survival.</p>
