--- a/References/index.html
+++ b/References/index.html
@@ -46,7 +46,8 @@
        <p>Benjamin, W 1936, ‘The Work of Art in the Age of Mechanical Reproduction’</p>
 
        <p>Kidd,J. (2015) <cite> Theories Of Representation<cite> [Online] Available at: 
-         <a href= "https://wits-e.wits.ac.za/access/content/group/WSOA3029-2020-SM2/Week%202/Kidd%20-%202015%20-%20Representation%20Ch1%20Theories%20of%20Representation.pdf"> https://wits-e.wits.ac.za/access/content/group/WSOA3029-2020-SM2/Week%202/Kidd%20-%202015%20-%20Representation%20Ch1%20Theories%20of%20Representation.pdf</a> (Accessed 15 September 2020)</p>
+         <a href= "https://wits-e.wits.ac.za/access/content/group/WSOA3029-2020-SM2/Week%202/Kidd%20-%202015%20-%20Representation%20Ch1%20Theories%20of%20Representation.pdf"> 
+          https://wits-e.wits.ac.za/access/content/group/WSOA3029-2020-SM2/Week%202/Kidd%20-%202015%20-%20Representation%20Ch1%20Theories%20of%20Representation.pdf</a> (Accessed 15 September 2020)</p>
     </article>
 
     <!-- Books References -->
@@ -98,10 +99,19 @@
         <p> Information Is Beautiful (2020) <cite>Who old are you</cite> [online] Available at: 
            <a href= "https://informationisbeautiful.net/visualizations/who-old-are-you/"> 
               https://informationisbeautiful.net/visualizations/who-old-are-you/</a></p>
+
+        <p>Launch Marketing (2018) <cite>What Is a Style Guide and Why Is It Important to My Brand Identity?</cite> 
+            [Online] Available at: <a href="https://www.launch-marketing.com/style-guide-important-brand-identity/">
+            https://www.launch-marketing.com/style-guide-important-brand-identity/ </a>(Accessed 23 August 2020)</p>
          
         <p>Rouse, M (2005) <cite>Information society.</cite> [Online] Available at: 
           <a href= “https://whatis.techtarget.com/definition/information-Society”> 
           https://whatis.techtarget.com/definition/information-Society </a>(Accessed 16 September 2020)</p>
+
+       <p>Rouse, M. (2019) <cite>User Interface (UI).</cite> [Online] Available at: 
+          <a href= "https://www.google.co.za/amp/s/searchapparchitecture.techtarget.com/definition/user-interface-UI%3famp=1"> 
+           https://www.google.co.za/amp/s/searchapparchitecture.techtarget.com/definition/user-interface-UI%3famp=1 </a> (Accessed 23 August 2020)</p>
+     
  
         <p>Tableau (2020) <cite>Data visualization beginner’s guide: a definition, examples, and learning resources.</cite>
           [Online] Available at: <a href= “https://www.tableau.com/learn/articles/data-visualisation”> 
