--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -48,7 +48,7 @@
     </section>
 
     <!-- Graph Heading And Extra Detail -->
-   <h2>Global Coronavirus Confimred Cases Data Hierarchy </h2>
+   <h2>Global Coronavirus Confirmed Cases Data Hierarchy </h2>
    <h3>Reflecting Data From Saturday 19th September 2020</h3>
 
    <!-- Graph Keys -->
