--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -79,7 +79,10 @@
       content throughout the website. I aim to add interactive graphs and diagrams as part of the creative work sections to increase user 
       interaction and engagement.</p>
 
-    <p>To further demonstrate the proposed user interface I have added below a user journey map. In this user journey map, 
+    <p>My goal for the website design is to achieve simplistic sophistication. To not overwhelm users, whilst attaining their attention and 
+      curiosity. I hoped to ensure that navigation is also kept simple and minimal. Currently, the most exciting and eye catching part of 
+      the website is the homepage and the graphs. Most of the creative and technical exploration will be demonstrated in the formation of 
+      the data visualization. To further demonstrate the proposed user interface I have added below a user journey map. In this user journey map, 
       I reflect on how users are likely to navigate through the website.</p>
 
     <!-- Add User Journey Map -->
